# contaixt

./: CLAUDE.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
app/: package-lock.json  package.json  tailwind.config.ts
app/app/: globals.css  layout.tsx  loading.tsx  page.tsx
app/components/: app-sidebar.tsx  dynamic-breadcrumb.tsx  forgot-password-form.tsx  login-form.tsx  nav-main.tsx  nav-user.tsx  sign-up-form.tsx  update-password-form.tsx  workspace-switcher.tsx
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_context_vaults.py  002_graph_chunking_embeddings.py  003_hnsw_index.py  004_vault_connection_restructure.py  005_add_google_drive_source.py  006_projects_and_chat.py
backend/app/: config.py  db.py  main.py  models.py  neo4j_client.py  worker.py
backend/app/api/: chat.py  ingest.py  jobs.py  projects.py  query.py  sources.py  vaults.py  webhooks.py  workspaces.py
backend/app/jobs/: enqueue.py  handlers.py  runner.py
backend/app/mcp/: __init__.py  resources.py  tools.py
backend/app/nango/: client.py  content.py  normalizers.py  proxy.py  sync.py
backend/app/processing/: chunker.py  context_builder.py  embeddings.py  entity_resolution.py  extraction.py  graph.py  graph_chunks.py  project_graph.py  project_sync.py
backend/app/processing/extractors/: __init__.py  docx.py  pdf.py  pptx.py  xlsx.py
backend/app/scripts/: migrate_embeddings_to_neo4j.py  neo4j_init.py  test_neo4j_vector.py
backend/app/storage/: __init__.py  client.py
mock_data/: README.md  seed.py
mock_data/documents/: 01_employee_handbook.md  02_security_policy.md  03_data_protection_guidelines.md  04_code_of_conduct.md  05_onboarding_checklist.md  06_travel_expense_policy.md  07_remote_work_policy.md  08_incident_response_plan.md  09_tech_radar_2025.md  10_coding_standards.md  11_cloud_architecture_guide.md  12_api_design_guidelines.md  13_cicd_pipeline_docs.md  14_monitoring_alerting.md  24_medtech_sow.md  (+15 more)
(+37 files in other folders)
